# vst-pitch-perfect-plugin

./: .gitignore  LICENSE  README.md
api-server/: audio_processor.py  requirements.txt  server.py  websocket_handler.py
cloud/: gcp-setup.sh
cloud/docker/api-server/: Dockerfile
cloud/docker/model-server/: Dockerfile
cloud/kubernetes/: api-deployment.yaml  model-deployment.yaml
data/: download.sh  preprocess.py  upload-to-gcp.sh
model/: evaluate.py  export.py  model.py  train.py
vst-plugin/: install-plugin.sh
vst-plugin/VocalTransformVST/: CMakeLists.txt  build.sh
vst-plugin/VocalTransformVST/Source/: PluginProcessor.h  WebSocketClient.h
